# bmcustomgraph

./: README.md
BmCustomPlot/: CMakeLists.txt  main.cpp
BmCustomPlot/include/: CustomGraph.h  QCustomPlot.h
BmCustomPlot/src/: CustomGraph.cpp  QCustomPlot.cpp
